--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "no-use-before-define": "off",
     "no-console": "off",
-    "no-alert": "off"
+    "no-alert": "off",
+    "global-require": "off"
   }
 }
