--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-blur": "~8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
