--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.7.3",
     "expo": "~38.0.8",
     "expo-barcode-scanner": "~8.2.1",
+    "expo-blur": "~8.1.2",
     "expo-status-bar": "^1.0.2",
     "galio-framework": "^0.7.1",
     "lottie-react-native": "^3.5.0",
@@ -21,13 +22,15 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "expo-blur": "~8.1.2"
+    "redux-form": "^8.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
