--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "expo-blur": "~8.1.2",
     "expo-status-bar": "^1.0.2",
     "galio-framework": "^0.7.1",
+    "i18next": "^19.8.2",
     "lottie-react-native": "^3.5.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-i18next": "^11.7.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-qrcode-svg": "^6.0.6",
