--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
+    "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-barcode-scanner": "~8.2.1",
     "expo-blur": "~8.1.2",
     "expo-status-bar": "^1.0.2",
     "galio-framework": "^0.7.1",
     "i18next": "^19.8.2",
+    "jwt-decode": "^3.0.0",
     "lottie-react-native": "^3.5.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -32,7 +34,8 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.6"
+    "redux-form": "^8.3.6",
+    "expo-notifications": "~0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
