--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
@@ -16,6 +17,7 @@
     "expo": "~38.0.8",
     "expo-barcode-scanner": "~8.2.1",
     "expo-blur": "~8.1.2",
+    "expo-notifications": "~0.3.3",
     "expo-status-bar": "^1.0.2",
     "galio-framework": "^0.7.1",
     "i18next": "^19.8.2",
@@ -34,8 +36,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.6",
-    "expo-notifications": "~0.3.3"
+    "redux-form": "^8.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
